assets/css/stock.scss
@import "variables.scss";

#stock {
  flex: 1;
  position: relative;

  div.column-header {
    position: relative;
    text-align: center;
    margin-bottom: 5px;
    padding-top: 7px;
    text-align: right;

    div.view-switch {
      display: inline-block;
      padding-right: 12px;

      a.document-view {
        margin-right: 10px;
      }

      a.graph-view i {
        font-size: 20px;
        vertical-align: 2px;
      }
    }

    div.close-reordering-div {
      position: absolute;
      top: 5px;
      left: 10px;
    }
  }
}

#pinned-cotos-body {
  position: absolute;
  top: 40px;
  bottom: 0;
  left: 0;
  right: 0;

  overflow-x: hidden;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 10px;
  padding-top: 18px;
  padding-bottom: 50px;

  @media (#{$wide-viewport}) {
    display: flex;
    justify-content: center; 

    div.root-connections {
      min-width: 460px;
      max-width: 640px;
    }
  }

  #coto-graph {
    position: absolute;
    top: 10px;
    bottom: 10px;
    left: 10px;
    right: 10px;

    div.tools {
      display: inline-block;
      position: absolute;
      top: 10px;
      right: 10px;
      z-index: 15;

      button {
        padding: 0 4px;
        height: 34px;
        line-height: 34px;
        background-color: rgba(255, 255, 255, 0.6);
        
        i {
          vertical-align: -8px;
        }
      }
    }

    #coto-graph-canvas {
      background-color: #fff;
      width: 100%;
      height: 100%;
    }

    &.full-open {
      position: fixed;
      left: 0;
      top: 0;
      right: 0;
      bottom: 0;
      background-color: #fff;
    }
  }

  div.pinned-coto {
    margin-top: 10px;
    margin-bottom: 20px;
    animation-duration: 1s;

    & > div.coto-inner > div.coto-header {
      i.pinned,
      i.connected {
        display: none;
      }
    }

    div.unpin-button {
      position: relative;
      height: 10px;

      a.unpin,
      span.not-unpinnable {
        position: absolute;
        top: -12px;
        left: 0;

        i {
          font-size: 24px;
        }
      }

      span.not-unpinnable {
        color: #ccc;
      }
    }
  }
}

.full-viewport-graph-mode {
  #app-header,
  #main-nav,
  #main-flow,
  #view-switch-container,
  #open-flow {
    display: none !important;
  }
}

